# lucasbox

./: README.md
lucasbox_server/: .env  .gitignore  Cargo.toml  build.rs  docker-compose.yml  rustfmt.toml  semantics-schema.json
lucasbox_server/db/migrations/: 00000_create_file.sql  00001_create_folder.sql  00002_create_tag.sql  00003_create_file_folder_link.sql
lucasbox_server/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
lucasbox_server/migrations/2022-10-30-164250_create_collection_item_file_tag/: down.sql  up.sql
lucasbox_server/src/: auth.rs  gql_errors.rs  lib.rs  main.rs  schema_db.rs  schema_graphql.rs
lucasbox_server/src/app/: cli.rs  handlers.rs  main.rs
lucasbox_server/src/entities/: collection.rs  collection_item.rs  item_file.rs  mod.rs  tag.rs  user.rs
lucasbox_server/src/model/: mod.rs
lucasbox_server/src/model/graphql/: file.rs  folder.rs  mod.rs  tag.rs
lucasbox_webclient/: .env  .eslintrc.cjs  README.md  apollo.config.js  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
lucasbox_webclient/src/: App.vue  apollo.ts  apolloAutoRefresh.ts  composables.ts  hooks.ts
lucasbox_webclient/src/components/: DownloadTable.vue  FeaturedMovieItem.vue  HomeLayout.vue  ListingMovieItem.vue  MenuLinkChevron.vue  PageLayout.vue  StatItem.vue  TagList.vue  ToDo.vue
lucasbox_webclient/src/components/collection/: CollectionBody.vue  CollectionCard.vue  CollectionChildrenList.vue  CollectionChildrenPanel.vue  CollectionHeader.vue  CollectionInlineChildrenList.vue  InlineChildrenList.vue
lucasbox_webclient/src/components/franchise/: FranchiseItem.vue  FranchiseMovie.vue  FranchiseRoot.vue  FranchiseSerie.vue  FranchiseSerieEpisode.vue  FranchiseTabMovies.vue  FranchiseTabSeries.vue
lucasbox_webclient/src/components/layout/: MainNavbar.vue  MainSidebar.vue  PageLayout.vue
lucasbox_webclient/src/router/: index.ts
lucasbox_webclient/src/stores/: auth.ts  collections.ts  tags.ts  testData.ts  testData2.ts
lucasbox_webclient/src/views/: CollectionBodyNewView.vue  CollectionChildrenPanelView.vue  CollectionView.vue  FranchiseView.vue  HomeView.vue  ListingView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue  WipView.vue
