[package]
name = "lucasbox_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version ="0.5", default-features = false, features = ["http1", "http2", "macros", "tower-log"] }
async-graphql = { version = "4.0", default-features = false, features = ["tokio", "uuid"] }
async-graphql-axum = "4.0"
diesel = { version = "2.0", default-features = false, features = ["postgres", "without-deprecated", "uuid"] }
diesel-async = { version = "0.1", features = ["postgres"] }
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }

dotenvy = "0.15"
uuid = "1.2"
argon2 = "0.4"
jwt-simple = "0.11"
